# esp32-parking-sensor

./: Cargo.toml  diagram.json  wokwi.toml
src/: buzzer.rs  led_bar.rs  main.rs  shift_register.rs  simple_timer.rs  ultrasonic_distance_sensor.rs
